--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "razorpay": "^2.9.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.31.0",
