--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.5.0",
     "@mui/material": "^6.5.0",
     "@mui/x-date-pickers": "^8.12.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@reduxjs/toolkit": "^2.9.0",
     "bcrypt": "^6.0.0",
     "d3": "^7.9.0",
@@ -28,6 +29,7 @@
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.31.0",
