--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "slick-carousel": "^1.8.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^19.1.0"
   }
 }
